--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,8 +1,8 @@
 .container-header {
   background-color: #1C1D20;
   height: 70px;
-  width: 100%;
-  padding: 10px 20px;
+  width: 90%;
+  padding: 0.5% 5%;
   position: fixed;
   display: grid;
   grid-template-columns: 50%;
